Cleaned up build warning messages.